--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                                         <a href="mailto:#">lazerjan11@gmail.com</a>
                                     </address>
                                     <address>
-                                         <a href="email-templates/LazerJanCaraan.pdf"  class="btn btn-primary" download="proposed_file_name">Download</a>
+                                         <a href="email-templates/LazerJanCaraan.pdf"  class="btn btn-primary" download="lazerjancaraan">Download</a>
                                     </address>
                                 </div>
                             </div>
