--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                                 <div class="col-md-12">
                                     <div class="feedback-form">
                                         <h2>Get in touch</h2>
-                                        <form id="contactForm" action="sendemail.php" method="POST">
+                                        <form id="contactForm" action="https://lazerjancaraan.github.io/sendemail.php" method="POST">
                                             <!-- <div class="form-group">
                                                 <label for="InputName">Name</label>
                                                 <input type="text" name="name" required="" class="form-control" id="InputName"
