--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                                     </div>
                                     <div class="content-item">
                                         <h3>Coding</h3>
-                                        <p>I enjoyed building different website. To practice my skills and to gain gain more knowledge and techniques.</p>
+                                        <p>I enjoyed building different website. To practice my skills and to gain more knowledge and techniques.</p>
                                     </div>
                                 </div>
                             </div>
