--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 </div>
                                 <div class="col-md-12">
                                     <p>
-                                        i graduated from Our Lady of Fatima University Pampanga campus where i studied Bachelor of Science in Information Technology.
+                                        I graduated from Our Lady of Fatima University Pampanga campus where i studied Bachelor of Science in Information Technology.
                                         While I was at university I worked part time for a Freelance Photographer.
                                         I spend a lot of time learning new techniques and actively help other people learn web development
                                     </p>
