--- a/index.html
+++ b/index.html
@@ -504,10 +504,10 @@
                                        Greenfields Sindalan  <br>
                                         City of San Fernando, Pampanga 2000
                                     </address>
-                                    <address>
+<!--                                     <address>
                                         <strong>Phone Number</strong><br>
                                         +63 915 370 9294
-                                    </address>
+                                    </address> -->
                                     <address>
                                         <strong>Mobile Number</strong><br>
                                         +63 915 370 9294
