--- a/index.html
+++ b/index.html
@@ -358,6 +358,27 @@
         </header>
         <!--  Timeline -->
         <ul class="timeline">
+               <!-- Timeline item-->
+              <li class="timeline-item ml-3 pb-4">
+                <div class="timeline-arrow"></div>
+                <div class="row no-gutter">
+                  <div class="col-lg-5 mb-4 mb-lg-0">
+                    <p class="font-weight-bold mb-2 text-primary text-small">05/2021 - Present </p>
+                    <h2 class="h5 mb-0 text-uppercase">PHP/Wordpress Developer</h2>
+                    <p class="text-small mb-0">Shore360 inc.</p><span class="small text-muted">Unit 2F-2, Business Center 6, Philexcel Business Park, MA Roxas Highway, Clark Freeport Zone, Philippines</span>
+                  </div>
+                  <div class="col-lg-7">
+                    <p class="text-muted">Develop & Enhance Wordpress Website.</p>
+                    <p class="text-muted">Maintain Website</p>
+                    <p class="text-muted">Implement New Custom Code.</p>
+                    <p class="text-muted">Responsibility to ensure that everyone is receiving the same experience across different devices, browsers.</p>
+                    <p class="text-muted">Editing Backend Code</p>
+     
+                  </div>
+
+                </div>
+              </li>
+          
               <!-- Timeline item-->
               <li class="timeline-item ml-3 pb-4">
                 <div class="timeline-arrow"></div>
